--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@electron-forge/maker-zip": "^6.0.0-beta.53",
     "@electron-forge/plugin-webpack": "^6.0.0-beta.53",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+    "@types/jquery": "^3.5.5",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "css-loader": "^4.3.0",
@@ -94,6 +95,7 @@
     "@types/react-dom": "^16.9.8",
     "chart.js": "^2.9.4",
     "electron-squirrel-startup": "^1.0.0",
+    "jquery": "^3.5.1",
     "react": "^16.14.0",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.14.0"
