--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@devexpress/dx-react-core": "^2.7.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/material-ui": "^0.21.8",
     "@types/react": "^16.9.53",
     "@types/react-chartjs-2": "^2.5.7",
