--- a/package.json
+++ b/package.json
@@ -94,11 +94,9 @@
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^16.9.8",
     "chart.js": "^2.9.4",
-    "electron-rebuild": "^2.3.5",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^16.14.0",
     "react-chartjs-2": "^2.11.1",
-    "react-dom": "^16.14.0",
-    "serialport": "^9.0.6"
+    "react-dom": "^16.14.0"
   }
 }
