--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "react": "^16.14.0",
     "react-chartjs-2": "^2.11.1",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.14.0"
   }
 }
