--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "react": "^16.14.0",
     "react-chartjs-2": "^2.11.1",
     "react-countup": "^4.3.3",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "react-visibility-sensor": "^5.1.1"
   }
 }
