Arduino comms work with new method. Installed serialport and electron-rebuild (might need to run "npx electron-rebuild" to run application).

--- a/package.json
+++ b/package.json
@@ -94,11 +94,13 @@
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^16.9.8",
     "chart.js": "^2.9.4",
+    "electron-rebuild": "^2.3.5",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^16.14.0",
     "react-chartjs-2": "^2.11.1",
     "react-countup": "^4.3.3",
     "react-dom": "^16.14.0",
-    "react-visibility-sensor": "^5.1.1"
+    "react-visibility-sensor": "^5.1.1",
+    "serialport": "^9.0.7"
   }
 }
