--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "react": "^16.14.0",
     "react-chartjs-2": "^2.11.1",
     "react-countup": "^4.3.3",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.14.0",
     "react-visibility-sensor": "^5.1.1",
     "serialport": "^9.0.7"
